# advent-of-code-2025

./: pyproject.toml
day1/: day1.py  output.txt
day2/: day2.py  test.py
day3/: day3.py  test.py
day4/: day4.py
day5/: day5.py  test.py
